--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,7 +25,9 @@
     "motion": "^12.6.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.4.0",
+    "styled-components": "^6.1.16",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.15",
     "tw-animate-css": "^1.2.4"
