--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,8 +27,10 @@
     "lucide-react": "^0.483.0",
     "motion": "^12.6.0",
     "react": "^19.0.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-intersection-observer": "^9.16.0",
     "react-router-dom": "^7.4.0",
     "styled-components": "^6.1.16",
     "swiper": "^11.2.6",
